fixed hero overlapping sections

--- a/sosialemedier.css
+++ b/sosialemedier.css
@@ -123,6 +123,7 @@ h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    position: relative;
 }
 
 section {
@@ -138,6 +139,7 @@ section {
 .hero {
     position: relative;
     width: 100%;
+    height: 100vh;
 }
 
 .hero > div {
@@ -145,11 +147,13 @@ section {
     left:0;
     top:0;
     width: 100%;
+    height: 100%;
 }
 
 .video video {
     width: 100%;
     object-fit: cover;
+    height: 100%;
 }
 
 
@@ -159,7 +163,7 @@ section {
     padding: 30px;
     background-color: var(--bakgrunnsfarge1);
     z-index: 2;
-}
+  }
 
 .menyknapp {
     display: inline-block;
